Enhanced QR Code Tools: Added dark mode, history feature, and improved UI/UX

--- a/index.html
+++ b/index.html
@@ -1,35 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Tools</title>
-     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+    <button id="darkModeToggle" class="theme-toggle">🌙 Dark Mode</button>
+
     <div class="container">
         <header>
-            <h1>📱QR Code Tools</h1>
-            <p>Easily convert text into QR codes or extract text from existing QR codes with our simple tools.</p>
+            <h1>📱 Ultimate QR Tools</h1>
+            <p>Generate, Scan, and Manage QR Codes easily with our modern tools.</p>
         </header>
         <main>
-            <a href="text-to-qr.html" class= "card">
+            <a href="text-to-qr.html" class="card">
                 <div class="icon">📄</div>
-                <h2>Text to QR Code</h2>
-                <p>Create a new QR code</p>
+                <div class="card-text">
+                    <h2>Text to QR Code</h2>
+                    <p>Create and customize new QR codes</p>
+                </div>
             </a>
-            <a href="qr-to-text.html" class= "card">
-                <div class="icon">🔍</div>
-                <h2>QR code to Text</h2>
-                <p>Scan an existing QR code</p>
+
+            <a href="qr-to-text.html" class="card">
+                <div class="icon">📷</div>
+                <div class="card-text">
+                    <h2>QR Code to Text</h2>
+                    <p>Scan from camera or upload image</p>
+                </div>
+            </a>
+
+            <a href="history.html" class="card">
+                <div class="icon">📜</div>
+                <div class="card-text">
+                    <h2>History</h2>
+                    <p>View saved and scanned QR codes</p>
+                </div>
             </a>
         </main>
         <footer>
-            <p>© 2024 QR Code Tools. All rights reserved.</p>
+            <p>© 2024 Ultimate QR Tools. All rights reserved.</p>
         </footer>
-       <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
-<script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
-<script src="scan-qr.js"></script>
     </div>
+
+    <script>
+        // Dark Mode Logic
+        document.addEventListener('DOMContentLoaded', () => {
+            const darkModeToggle = document.getElementById('darkModeToggle');
+
+            // Check saved preference
+            const isDark = localStorage.getItem('darkMode') === 'true';
+            if (isDark) {
+                document.body.classList.add('dark-mode');
+                darkModeToggle.textContent = '☀️ Light Mode';
+            }
+
+            darkModeToggle.addEventListener('click', () => {
+                document.body.classList.toggle('dark-mode');
+                const isDarkMode = document.body.classList.contains('dark-mode');
+                darkModeToggle.textContent = isDarkMode ? '☀️ Light Mode' : '🌙 Dark Mode';
+                localStorage.setItem('darkMode', isDarkMode);
+            });
+        });
+    </script>
 </body>
+
 </html>
