--- a/text-to-qr.html
+++ b/text-to-qr.html
@@ -1,33 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Generator</title>
     <link rel="stylesheet" href="css/style1.css">
 </head>
+
 <body>
     <div class="container">
         <header>
             <h2>QR Code Generator</h2>
+            <div style="display: flex; gap: 10px;">
+                <a href="history.html"
+                    style="padding: 8px 15px; background: #17a2b8; color: white; border-radius: 20px; text-decoration: none; font-size: 14px;">📜
+                    View History</a>
+                <button id="darkModeToggle" class="theme-toggle">🌙 Dark Mode</button>
+            </div>
         </header>
         <div class="input-section">
             <label for="qrtext">Your Text</label>
             <textarea id="qrtext" placeholder="Enter text to generate QR code"></textarea>
-            <button id="generateBtn">Generator QR Code</button>
-            </div>
-            <div class="output-section">
-                <h3>Generated QR Code</h3>
-                <div id="qrCode"></div>
-                <div class="btn-group">
-                    <button id="downloadBtn">⬇️Download</button>
-                    <button id="shareBtn">🔗Share</button>
+
+            <!-- Customization Options -->
+            <div class="customization-options">
+                <div class="option-group">
+                    <label for="qrColor">QR Color:</label>
+                    <input type="color" id="qrColor" value="#000000">
                 </div>
-            </div>"
+
+                <div class="option-group">
+                    <label for="bgColor">Background:</label>
+                    <input type="color" id="bgColor" value="#ffffff">
+                </div>
+
+                <div class="option-group">
+                    <label for="qrSize">Size:</label>
+                    <select id="qrSize">
+                        <option value="200">Small (200px)</option>
+                        <option value="300" selected>Medium (300px)</option>
+                        <option value="400">Large (400px)</option>
+                        <option value="500">Extra Large (500px)</option>
+                    </select>
+                </div>
+
+                <div class="option-group">
+                    <label for="errorLevel">Quality:</label>
+                    <select id="errorLevel">
+                        <option value="L">Low</option>
+                        <option value="M" selected>Medium</option>
+                        <option value="Q">High</option>
+                        <option value="H">Very High</option>
+                    </select>
+                </div>
+            </div>
+
+            <button id="generateBtn">Generate QR Code</button>
+        </div>
+        <div class="output-section">
+            <h3>Generated QR Code</h3>
+            <div id="qrCode"></div>
+            <div class="btn-group">
+                <button id="downloadBtn">⬇️Download</button>
+                <button id="shareBtn">🔗Share</button>
+                <button id="saveHistoryBtn">💾 Save to History</button>
+            </div>
+        </div>"
     </div>
 
-<script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
-<script src="js/text-to-qr.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+    <script src="js/text-to-qr.js"></script>
 </body>
 
 </html>
